--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -1,22 +1,29 @@
 <section class="content">
   <div class="row">
     <div class="col-md-3">
-      <a routerLink="/categories" class="btn btn-primary btn-block margin-bottom">Manage Categories</a>
-      <div class="box box-solid">
-        <div class="box-header with-border">
+      <div class="box box-primary">
+        <div class="box-header ui-sortable-handle" style="cursor: move;">
+          <i class="ion ion-clipboard"></i>
           <h3 class="box-title">Categories</h3>
         </div>
-        <div class="box-body no-padding">
-          <ul class="nav nav-pills nav-stacked">
-            <li *ngFor="let category of categories">
-              <a (click)="getCategoryTasks(category)"><i class="fa fa-file-text-o"></i> {{category.name}}</a>
+        <div class="box-body">
+          <ul class="todo-list ui-sortable">
+            <li (click)="getCategoryTasks(category)" *ngFor="let category of categories">
+              {{category.name}}
+              <span class="text"></span>
+              <div class="tools">
+                <a routerLink="/categories/{{category._id}}"><i class="fa fa-edit"></i></a>
+                <i (click)="destroyCategory(category)" class="fa fa-trash-o"></i>
+              </div>
             </li>
-            <li>
-              <a routerLink="/dashboard"><i class="fa fa-file-text-o"></i>All tasks</a>
+            <li (click)="getTasks(category)">
+              All tasks
             </li>
           </ul>
         </div>
-        <!-- /.box-body -->
+        <div class="box-footer clearfix no-border">
+          <a routerLink="/categories/new" class="btn btn-default pull-right"><i class="fa fa-plus"></i> Add category</a>
+        </div>
       </div>
     </div>
     <div class="col-md-9">
