--- a/client/src/app/tasks/tasks.component.html
+++ b/client/src/app/tasks/tasks.component.html
@@ -1,10 +1,8 @@
 <div class="box box-primary">
   <div class="box-header ui-sortable-handle" style="cursor: move;">
     <i class="ion ion-clipboard"></i>
-
     <h3 class="box-title">To Do List</h3>
   </div>
-  <!-- /.box-header -->
   <div class="box-body">
     <ul class="todo-list ui-sortable">
       <li *ngFor="let task of tasks" class="" style="">
@@ -16,12 +14,11 @@
         </small>
         <div class="tools">
           <a routerLink="/tasks/{{task._id}}"><i class="fa fa-edit"></i></a>
-          <i class="fa fa-trash-o"></i>
+          <i (click)="destroy(task)" class="fa fa-trash-o"></i>
         </div>
       </li>
     </ul>
   </div>
-  <!-- /.box-body -->
   <div class="box-footer clearfix no-border">
     <a routerLink="/tasks/new" class="btn btn-default pull-right"><i class="fa fa-plus"></i> Add task</a>
   </div>
