--- a/client/src/app/tasks/tasks.component.html
+++ b/client/src/app/tasks/tasks.component.html
@@ -4,11 +4,13 @@
     <h3 class="box-title">To Do List</h3>
   </div>
   <div class="box-body">
-    <ul class="todo-list ui-sortable">
+    <ul class="todo-list">
       <li *ngFor="let task of tasks" class="" style="">
-        <input type="checkbox" value="" [checked]="task.status">
+        <!--<input type="checkbox" value="" [checked]="task.status">-->
+        <i *ngIf="task.status" class="fa fa-check-square-o text-yellow"></i>
+        <i *ngIf="!task.status" class="fa fa-check-square-o"></i>
         {{task.title}}
-        <span class="text">{{task.description.slice(0, 25)}}...</span>
+        <span class="text">{{task.description.slice(0, 25)}}{{task.description.length > 25 ? '...' : ''}}</span>
         <small *ngIf="task.remind" class="label label-danger">
           <i class="fa fa-clock-o"></i>{{task.remind | date : "short"}}
         </small>
@@ -20,6 +22,6 @@
     </ul>
   </div>
   <div class="box-footer clearfix no-border">
-    <a routerLink="/tasks/new" class="btn btn-default pull-right"><i class="fa fa-plus"></i> Add task</a>
+    <a routerLink="/tasks/new/{{category ? category._id : ''}}" class="btn btn-default pull-right"><i class="fa fa-plus"></i> Add task</a>
   </div>
 </div>
