--- a/client/src/app/categories-detail/categories-detail.component.html
+++ b/client/src/app/categories-detail/categories-detail.component.html
@@ -1,29 +1,34 @@
-<div class="row">
-  <div class="box box-info">
-    <div class="box-header with-border">
-      <h3 *ngIf="category" class="box-title">{{category.name | uppercase}} Details</h3>
-      <h3 *ngIf="!category" class="box-title">Create new category</h3>
+<section class="content">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="box box-info">
+        <div class="box-header with-border">
+          <h3 *ngIf="category" class="box-title">{{category.name | uppercase}} Details</h3>
+          <h3 *ngIf="!category" class="box-title">Create new category</h3>
+        </div>
+        <form class="form-horizontal" [formGroup]="categoryForm" (ngSubmit)="onSubmit()">
+          <div class="box-body">
+            <div class="form-group">
+              <label for="inputName" class="col-sm-2 control-label">Name</label>
+              <div class="col-sm-10">
+                <input type="text" formControlName="name" value="{{category ? category.name : '' }}"
+                       class="form-control" id="inputName" placeholder="Name" autocomplete="off" required>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="inputDescription" class="col-sm-2 control-label">Description</label>
+              <div class="col-sm-10">
+                <input type="text" formControlName="description" value="{{category ? category.description : '' }}"
+                       class="form-control" id="inputDescription" placeholder="Description" autocomplete="off">
+              </div>
+            </div>
+          </div>
+          <div class="box-footer">
+            <a (click)="goBack()" class="btn btn-default"> Go back</a>
+            <button type="submit" class="btn btn-default pull-right">Save</button>
+          </div>
+        </form>
+      </div>
     </div>
-    <form class="form-horizontal" [formGroup]="categoryForm" (ngSubmit)="onSubmit()">
-      <div class="box-body">
-        <div class="form-group">
-          <label for="inputName" class="col-sm-2 control-label">Name</label>
-          <div class="col-sm-10">
-            <input type="text" formControlName="name" value="{{category ? category.name : '' }}" class="form-control" id="inputName" placeholder="Name" autocomplete="off" required>
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="inputDescription" class="col-sm-2 control-label">Description</label>
-          <div class="col-sm-10">
-            <input type="text" formControlName="description" value="{{category ? category.description : '' }}" class="form-control" id="inputDescription" placeholder="Description" autocomplete="off">
-          </div>
-        </div>
-      </div>
-      <div class="box-footer">
-        <a (click)="goBack()" class="btn btn-default"> Go back</a>
-        <button type="submit" class="btn btn-default pull-right">Save</button>
-      </div>
-    </form>
   </div>
-</div>
-
+</section>
