--- a/client/src/app/task-detail/task-detail.component.html
+++ b/client/src/app/task-detail/task-detail.component.html
@@ -9,6 +9,7 @@
         </div>
         <form class="form-horizontal" [formGroup]="taskForm" (ngSubmit)="onSubmit()">
           <div class="box-body">
+
             <div class="form-group">
               <label for="inputName" class="col-sm-2 control-label">Name</label>
               <div class="col-sm-10">
@@ -16,6 +17,7 @@
                        id="inputName" placeholder="Title" autocomplete="off" required>
               </div>
             </div>
+
             <div class="form-group">
               <label for="inputDescription" class="col-sm-2 control-label">Description</label>
               <div class="col-sm-10">
@@ -23,11 +25,17 @@
                        class="form-control" id="inputDescription" placeholder="Description" autocomplete="off">
               </div>
             </div>
+
             <div class="checkbox">
               <label>
-                <input formControlName="status" type="checkbox" [checked]="task && task.status "> Status
+                <input formControlName="status" type="checkbox" [checked]="task && task.status"> Status
               </label>
             </div>
+
+            <input [owlDateTime]="dt1" [owlDateTimeTrigger]="dt1" formControlName="remind" placeholder="Date Time" value="{{task && task.remind}}">
+            <owl-date-time #dt1></owl-date-time>
+
+            <hr>
           </div>
           <div class="box-footer">
             <a (click)="goBack()" class="btn btn-default">Go back</a>
