--- a/client/src/app/tasks/tasks.component.html
+++ b/client/src/app/tasks/tasks.component.html
@@ -6,9 +6,8 @@
   <div class="box-body">
     <ul class="todo-list">
       <li *ngFor="let task of tasks" class="" style="">
-        <!--<input type="checkbox" value="" [checked]="task.status">-->
         <i *ngIf="task.status" class="fa fa-check-square-o text-yellow"></i>
-        <i *ngIf="!task.status" class="fa fa-check-square-o"></i>
+        <i *ngIf="!task.status" class="fa fa-square-o"></i>
         {{task.title}}
         <span class="text">{{task.description.slice(0, 25)}}{{task.description.length > 25 ? '...' : ''}}</span>
         <small *ngIf="task.remind" class="label label-danger">
