--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,35 +1,36 @@
-<section class="content">
-  <div class="row">
-    <div class="col-md-3">
-      <div class="box box-primary">
-        <div class="box-header ui-sortable-handle" style="cursor: move;">
-          <i class="ion ion-clipboard"></i>
-          <h3 class="box-title">Categories</h3>
-        </div>
-        <div class="box-body">
-          <ul class="todo-list ui-sortable">
-            <li (click)="getCategoryTasks(cat)" *ngFor="let cat of categories">
-              <span><i *ngIf="category && cat._id === category._id" class="fa  fa-caret-right"></i></span>
-              {{cat.name}}
-              <span class="text"></span>
-              <div class="tools">
-                <a routerLink="/categories/{{cat._id}}"><i class="fa fa-edit"></i></a>
-                <i (click)="destroyCategory(cat)" class="fa fa-trash-o"></i>
-              </div>
-            </li>
-            <li (click)="getTasks()">
-              <span><i *ngIf="!category" class="fa  fa-caret-right"></i></span>
-              All tasks
-            </li>
-          </ul>
-        </div>
-        <div class="box-footer clearfix no-border">
-          <a routerLink="/categories/new" class="btn btn-default pull-right"><i class="fa fa-plus"></i> Add category</a>
-        </div>
+<nz-layout>
+  <nz-sider [nzWidth]="300" style="background:#fff; padding: 24px; min-height: 280px; ">
+    <div class="box box-primary">
+      <div class="box-header ui-sortable-handle">
+        <h3 class="box-title">Categories</h3>
+        <a routerLink="/categories/new" nz-button nzType="primary">Add category</a>
+      </div>
+      <div class="box-body">
+        <ul class="todo-list ui-sortable">
+          <li (click)="getCategoryTasks(cat)" *ngFor="let cat of categories">
+            <span>
+              <i *ngIf="category && cat._id === category._id" nz-icon type="caret-right" theme="outline"></i>
+            </span>
+            {{cat.name}}
+            <span class="text"></span>
+            <div class="tools">
+              <a routerLink="/categories/{{cat._id}}">
+                <i nz-icon type="edit" theme="outline"></i>
+              </a>
+              <i nz-icon (click)="destroyCategory(cat)" type="delete" theme="outline" style="cursor: pointer;"></i>
+            </div>
+          </li>
+          <li (click)="getTasks()">
+            <span><i *ngIf="!category" nz-icon type="caret-right" theme="outline"></i></span>
+            All tasks
+          </li>
+        </ul>
       </div>
     </div>
-    <div class="col-md-9">
-     <app-tasks [categoryTasks]="tasks" [category]="category"></app-tasks>
-    </div>
-  </div>
-</section>
+  </nz-sider>
+  <nz-layout>
+    <nz-content style="background:#fff; padding: 24px; min-height: 280px;">
+      <app-tasks [categoryTasks]="tasks" [category]="category"></app-tasks>
+    </nz-content>
+  </nz-layout>
+</nz-layout>
