--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,5 +1,3 @@
-<div *ngIf="messageService.messages.length" class="alert alert-danger alert-dismissible">
-  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-  <h4><i class="icon fa fa-ban"></i> Alert!</h4>
-  <div *ngFor='let message of messageService.messages'> {{message}} </div>
+<div *ngIf="messageService.messages.length">
+  <nz-alert  *ngFor='let message of messageService.messages' nzType="warning" nzMessage={{message}}></nz-alert>
 </div>
